# zed-obsidian

crates/obsidian/: Cargo.toml
crates/obsidian/src/: graph_view.rs  lib.rs  markdown_preview.rs  mod.rs  note_editor.rs
